Resize banner to avoid cropping

--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -51,7 +51,7 @@ body {
 #banner {
   background-image: url("../Photos/moonrise.jpg");
   background-size: cover;
-  height: 500px;
+  height: 438px;
   width: 100%;
 }
 
